platform/istio/security/hello-nginx/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: hello-nginx
spec:
  mtls:
    mode: STRICT
